--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
-title: Minimal theme
+title: Esteban Martínez Hernández 
+description : This site is a Portfolio of my BS degree studying Nanotechnology at Tec de Monterrey
 logo: /assets/img/logo.png
 description: Minimal is a theme for GitHub Pages.
 show_downloads: true
