--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,4 @@
-title: Esteban Martínez Hernández 
-description : This site is a Portfolio of my BS degree studying Nanotechnology at Tec de Monterrey
+title: Minimal theme
 logo: /assets/img/logo.png
 description: Minimal is a theme for GitHub Pages.
 show_downloads: true
