--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Minimal theme
+title: Esteban Martínez Hernández 
 logo: /assets/img/logo.png
-description: Minimal is a theme for GitHub Pages.
+description: In this Portfolio I'll share my experience studyin Engineering in Nanotechnology at Tecnológico de Monterrey
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-minimal
